--- a/render.yaml
+++ b/render.yaml
@@ -8,3 +8,5 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: "3.10"
+      - key: GROQ_API_KEY
+        value: your_actual_groq_key_here
