--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,9 +5,9 @@ aiofiles
 python-multipart
 httpx
 sqlalchemy
-passlib[bcrypt]
+passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
 psycopg2-binary
 itsdangerous
 reportlab
 alembic>=1.13.1
-
